--- a/RingCT over BLS12-381.ipynb
+++ b/RingCT over BLS12-381.ipynb
@@ -2,26 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "0cfbe967",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bls_py import (aggregation_info\n",
-    "    ,bls\n",
-    "    ,bls12381\n",
-    "    ,ec\n",
-    "    ,fields\n",
-    "    ,fields_t\n",
-    "    ,fields_t_c\n",
-    "   , keys\n",
-    "   , pairing\n",
-    "   , signature\n",
-    "    ,tdata\n",
-    "    ,tests\n",
-    "    ,threshold\n",
-    "    ,util)\n",
-    "\n",
+    "from bls_py import (bls, ec)\n",
     "from random import randint"
    ]
   },
@@ -35,26 +21,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "c780be27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = ec.generator_Fq()\n",
-    "l = ec.default_ec.n"
+    "G = ec.generator_Fq() # G1\n",
+    "l = ec.default_ec.n   # the G1 group order"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "id": "801f585d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Hp(point: bls.AffinePoint) -> bls.AffinePoint:\n",
+    "    \"\"\"Hash a point to point\"\"\"\n",
     "    return ec.hash_to_point_Fq(point.serialize())\n",
     "\n",
     "def Hs(*xs):\n",
+    "    \"\"\"Hash to field, result will be an integer in 0..l\"\"\"\n",
     "    h = b''\n",
     "    for x in xs:\n",
     "        if type(x) == str:\n",
@@ -63,85 +51,114 @@
     "            b = x.serialize()\n",
     "        else:\n",
     "            b = bytes(x)\n",
+    "\n",
     "        h = ec.hash256(h + b)\n",
+    "\n",
     "    return int.from_bytes(h, \"big\") % l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "id": "7e1f6166",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Number of signers in the ring\n",
     "N = 21\n",
+    "\n",
+    "# The message we are signing\n",
     "m = \"important message\"\n",
     "\n",
     "xs = [bls.PrivateKey.from_seed(str(i)).value for i in range(N)]\n",
     "P = [x * G for x in xs]\n",
     "\n",
-    "# j is the index of the secret signer\n",
+    "# j is the index of the secret signer in the ring\n",
     "j = 0\n",
     "x = xs[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "8ac15472",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Key Image\n",
-    "I = x * Hp(P[j])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "0ba9ed31",
+   "execution_count": 5,
+   "id": "e8294da5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Generate the random blinding values\n",
     "alpha = randint(0, l)\n",
     "s = [randint(0, l) if i != j else None for i in range(N)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "0995a301",
+   "execution_count": 6,
+   "id": "90e3ebcd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Key Image\n",
+    "I = x * Hp(P[j])\n",
+    "\n",
+    "# Prepare for ring signing\n",
     "L = [None] * N\n",
     "R = [None] * N\n",
     "c = [None] * N\n",
     "\n",
+    "# Start at index j, then proceed around the ring.\n",
+    "# Each step computes c[i+1]\n",
     "L[j] = alpha * G\n",
     "R[j] = alpha * Hp(P[j])\n",
     "c[(j+1) % N] = Hs(m, L[j], R[j])\n",
     "\n",
-    "for i in range(1, N):\n",
-    "    idx = (j + i) % N\n",
-    "    L[idx] = s[idx] * G + c[idx] * P[idx]\n",
-    "    R[idx] = s[idx] * Hp(P[idx]) + c[idx] * I\n",
-    "    c[(idx + 1) % N] = Hs(m, L[idx], R[idx])"
+    "for offset in range(1, N):\n",
+    "    i = (j + offset) % N\n",
+    "    L[i] = s[i] * G + c[i] * P[i]\n",
+    "    R[i] = s[i] * Hp(P[i]) + c[i] * I\n",
+    "    c[(i + 1) % N] = Hs(m, L[i], R[i])\n",
+    "\n",
+    "# s[j] is chosen so that it completes the ring without exposing x\n",
+    "s[j] = (alpha - c[j] * x) % l"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 85,
-   "id": "8bb8582c",
+   "cell_type": "markdown",
+   "id": "478db511",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "s[j] = (alpha - (c[j] * x)) % l"
+    "$s_j = \\alpha - c_j x  \\text{ mod }  l$\n",
+    "\n",
+    "rearranging for alpha gives:\n",
+    "\n",
+    "(1) $\\alpha = s_j + c_j x  \\text{ mod }  l$\n",
+    "\n",
+    "Now consider the equation for L[j], R[j] used above:\n",
+    "\n",
+    "$L_j = \\alpha G$\n",
+    "\n",
+    "$R_j = \\alpha H_p(P_j)$\n",
+    "\n",
+    "Substituing $\\alpha$ with (1):\n",
+    "\n",
+    "$L_j = \\alpha G = (s_j + c_j x) G = s_j G + c_j x G = s_j G + c_j P_j$\n",
+    "\n",
+    "\n",
+    "$R_j = \\alpha H_p(P_j) = s_j H_p(P_j) + c_j x H_p(P_j) =  s_j H_p(P_j) + c_j I$\n",
+    "\n",
+    "The result is $s_j$ and $c_j$ can be exposed without revealing $x$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "id": "94b97442",
    "metadata": {},
    "outputs": [],
@@ -151,181 +168,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "41c87a53",
+   "execution_count": 8,
+   "id": "357ff22d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "alpha == (s[j] + c[j] * x) % l"
+    "# Sanity check on invariants\n",
+    "assert alpha == (s[j] + c[j] * x) % l\n",
+    "assert L[j] == alpha * G\n",
+    "assert alpha * G == s[j] * G + c[j] * x * G\n",
+    "assert alpha * G == s[j] * G + (c[j] * x % l) * G\n",
+    "assert c[j] * x  * G == c[j] * P[j]\n",
+    "assert alpha * G == s[j] * G + c[j] * P[j]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "24888791",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "L[j] == alpha * G"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "2a4b0dc2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "alpha * G == s[j] * G + c[j] * x * G"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "23945ff6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "alpha * G == s[j] * G + (c[j] * x % l) * G"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "55a232f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c[j] * x  * G == c[j] * P[j]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "b2af8097",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "alpha * G == s[j] * G + c[j] * P[j]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "46724f88",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "52435875175126190479447740508185965837690552500527637822603658699938581184513"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ec.default_ec.n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "fe71c447",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10911266535558011642090291323489759204648573621235556134517723471565392816376"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s[j]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "id": "bc6e77e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now to verify\n",
-    "\n",
     "def verify(I, c0, s, P, m):\n",
     "    N = len(P)\n",
     "    \n",
@@ -346,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "id": "01c825bf",
    "metadata": {},
    "outputs": [
@@ -361,53 +225,6 @@
    "source": [
     "verify(*sig, P, m)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "b10003c9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[4743997262915561299125662112332479794546814593664826494615037867389839415761,\n",
-       " 48593580839996011308605559297217465500240338083195273690359642139437199354217,\n",
-       " 6112860136447671528098358327700418968737786762848384794127819209703304836358]"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b52fa7a2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61372e27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a18818e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
