--- a/RingCT.ipynb
+++ b/RingCT.ipynb
@@ -80,15 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "7d8d7dbc",
+   "execution_count": 30,
+   "id": "6c7ff420",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pi = 3\n"
+      "pi = 7\n",
+      "inputs = [1, 1, 1]\n",
+      "outputs = [1, 2]\n"
      ]
     }
    ],
@@ -105,7 +107,7 @@
     "in_blinding = [rand_Z() for _ in in_a]\n",
     "\n",
     "# output amounts\n",
-    "out_a = [sum(in_a)] # TODO: deal with multiple outputs\n",
+    "out_a = [sum(in_a) // 2, sum(in_a) - sum(in_a) // 2]\n",
     "out_P = [rand_Z() * G for _ in out_a]\n",
     "\n",
     "assert sum(in_a) - sum(out_a) == 0\n",
@@ -121,7 +123,9 @@
     "C = [[commit(rand_Z(), rand_Z()) for _ in range(M)] for _ in range(N - 1)]\n",
     "\n",
     "pi = randint(0, N-1)\n",
-    "print(\"pi =\", pi)\n",
+    "print(f\"pi = {pi}\")\n",
+    "print(f\"inputs = {in_a}\")\n",
+    "print(f\"outputs = {out_a}\")\n",
     "\n",
     "P.insert(pi, P_pi)\n",
     "C.insert(pi, [commit(in_a[m], in_blinding[m]) for m in range(M)])"
@@ -129,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "792fef1c",
+   "execution_count": 31,
+   "id": "213ff9fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4372648b",
+   "id": "4a2e6b2f",
    "metadata": {},
    "source": [
     "### Perform MLSAG on $R$\n",
@@ -163,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "e056df80",
+   "execution_count": 32,
+   "id": "be7b24b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,8 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "aaa21498",
+   "execution_count": 33,
+   "id": "b686209d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,8 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "c6cc2ef6",
+   "execution_count": 34,
+   "id": "7a61410c",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3662275",
+   "id": "47856cfa",
    "metadata": {},
    "outputs": [],
    "source": []
